added gray color

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --bg-primary: #202122;
   --primary-accent: #9400d3;
   --primary-accent-hover: #720099;
+  --primary-gray: #888888;
 
   /*fonst*/
   --montserrat: font-family: 'Montserrat', sans-serif;
