--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
     /*colors*/
   --bg-primary: #202122;
+  --bg-accent: #3C3D3E;
   --primary-accent: #9400d3;
   --primary-accent-hover: #720099;
   --primary-gray: #888888;
