added new color

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
     /*colors*/
   --bg-primary: #202122;
   --bg-accent: #3C3D3E;
+  --bg-accent-dark: 	#2d2e2f;
   --primary-accent: #9400d3;
   --primary-accent-hover: #720099;
   --primary-gray: #888888;
